# RaytracingCornellbox

./: CMakeLists.txt  readme.md
examples/: CMakeLists.txt  ygrade.cpp  yraytrace.cpp
libs/: CMakeLists.txt
libs/yocto/: yocto_geometry.h  yocto_sampling.h  yocto_sceneio.cpp  yocto_shape.cpp  yocto_shape.h
libs/yocto_examples/: CMakeLists.txt  yocto_grade.cpp  yocto_grade.h  yocto_raytrace.cpp  yocto_raytrace.h
tests/raytrace/01_cornellbox/: cornellbox.json  cornellbox_ROW.json  cornellbox_ROW_inverted.json
tests/raytrace/03_texture/: texture_emission.json
tests/raytrace/08_glass/: glass_rough.json
